Removed and ignored UnityVS files, they were unnecessary. Fixed the mesh generation on elevated tiles. Not so optimum for the moment, but it's something.

--- a/.gitignore
+++ b/.gitignore
@@ -213,6 +213,9 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 
+# UnityVS
+Assets/UnityVS
+
 # Imported from a previous project
 # Note: Might have duplicates
 *.booproj
@@ -231,4 +234,5 @@ Temp
 obj
 sysinfo.txt
 taosim_new-csharp.sln.DotSettings.user
+
 
